PolSourceTasks/src/objects/Opinion__c.object
<CustomObject>
    <fields>
        <fullName>Book__c</fullName>
        <label>Book</label>
        <referenceTo>Book__c</referenceTo>
        <relationshipLabel>Opinions</relationshipLabel>
        <relationshipName>Opinions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Contact</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Your record type doesn&apos;t allow you to insert an opinion</errorMessage>
            <filterItems>
                <field>Contact.RecordTypeId</field>
                <operation>equals</operation>
                <value>Reader</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opinions</relationshipLabel>
        <relationshipName>Opinions</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Edition__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Edition</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>This edition is for another book that you want to review!</errorMessage>
            <filterItems>
                <field>Edition__c.Book__c</field>
                <operation>equals</operation>
                <valueField>$Source.Book__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Edition__c</referenceTo>
        <relationshipLabel>Opinions</relationshipLabel>
        <relationshipName>Opinions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opinion_content__c</fullName>
        <label>Opinion content</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Rate__c</fullName>
        <label>Rate</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Opinion</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>OpinionView</fullName>
        <columns>NAME</columns>
        <columns>Book__c</columns>
        <columns>Edition__c</columns>
        <columns>Rate__c</columns>
        <filterScope>Everything</filterScope>
        <label>OpinionView</label>
    </listViews>
    <nameField>
        <displayFormat>OP-{000000}</displayFormat>
        <label>Opinion Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opinions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>